# Ruffo-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/: __init__.py  main.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  branch_info.py  conversation.py  escalation.py  farewell.py  greeting.py  intent_router.py  order_handler.py  product_info.py
src/channels/: __init__.py
src/channels/telegram/: __init__.py  bot.py  handlers.py  keyboards.py
src/channels/web/: __init__.py  api.py
src/channels/web/static/: app.js  index.html  styles.css
src/config/: __init__.py  prompts.py  settings.py
src/schemas/: __init__.py  customer.py  intents.py  order.py  product.py
src/tools/: __init__.py  agent_tools.py  upselling.py
src/tools/sheets/: __init__.py  branches.py  client.py  products.py
src/tools/slack/: __init__.py  notifications.py
tests/: __init__.py  conftest.py
tests/test_agent/: __init__.py  test_state.py
tests/test_tools/: __init__.py  test_products.py
